<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/grupo2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:text="@string/our_menu" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">

    <Button
        android:text="@string/antojitos"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:id="@+id/button_antojitos"
        />
    <Button
        android:text="@string/especialidades"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:id="@+id/button_especialidades"
        />
    <Button
        android:text="@string/combinations"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:id="@+id/button_combinations"/>
    <Button
        android:text="@string/tortas"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:id="@+id/button_tortas"/>
    <Button
        android:text="@string/sopas"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:id="@+id/button_sopas"/>
    <Button
        android:text="@string/drinks"
        android:textColor="@color/white"
        android:background="@drawable/first_gradient"
        android:paddingHorizontal="@dimen/menu_buttons_paddings"
        android:layout_marginEnd="@dimen/menu_buttons_margin"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="@dimen/menu_buttons_text"
        android:paddingVertical="@dimen/menu_buttons_paddings"
        android:id="@+id/button_drinks"
        />
    </GridLayout>
</LinearLayout>