<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/crema"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/portales" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_text"
        android:textColor="@color/verde"
        android:textSize="24sp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="@color/verde"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/welcome_description" />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:width="219dp"
        android:height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:textColor="@color/white"
        android:text="@string/button_start" />

</LinearLayout>